clusters/edge-sdr/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: platform-edge-sdr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Management
    gethomepage.dev/name: Homepage
    gethomepage.dev/icon: homepage
    gethomepage.dev/description: Service dashboard
spec:
  rules:
    - host: mgmt-edge-sdr.wsh.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
